--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -43,7 +43,7 @@
     </div>
   </div>
   <div class="adrow row col-12" style=" ">
-    <a type="submit" href="admin/login" class="ad btn btn-primary btn-block mb-4" style=" ">ADMIN MODE</a>
+    <a type="submit" href="admin/login" target="_blank" class="ad btn btn-primary btn-block mb-4" style=" ">ADMIN MODE</a>
   </div>
 </section>
 <style>
