--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -136,9 +136,9 @@
 <div class="" id="contact">
 
   <!-- Footer -->
-  <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
+  <footer class="text-center text-lg-start text-white" style="background-color: #000000">
     <!-- Section: Social media -->
-    <section class="d-flex justify-content-between p-4" style="background-color: #6351ce">
+    <section class="d-flex justify-content-between p-4" style="background-color: #19181f">
       <!-- Left -->
       <div class="me-5">
         <span>Get connected with us on social networks:</span>
@@ -147,23 +147,24 @@
 
       <!-- Right -->
       <div>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-facebook-f"></i>
+        <a href="" class="text-white me-4 mr-3 ">
+           <i class="fab fa-github"></i>
+          
         </a>
-        <a href="" class="text-white me-4">
+        <a href="" class="text-white me-4  mr-3 ">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="" class="text-white me-4">
+        <a href="" class="text-white me-4  mr-3 ">
           <i class="fab fa-google"></i>
         </a>
-        <a href="" class="text-white me-4">
+        <a href="" class="text-white me-4  mr-3 ">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="" class="text-white me-4">
+        <a href="" class="text-white me-4  mr-3 ">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-github"></i>
+        <a href="" class="text-white me-4  mr-3">
+         <i class="fab fa-facebook-f"></i>
         </a>
       </div>
       <!-- Right -->
@@ -178,12 +179,10 @@
           <!-- Grid column -->
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
-            <h6 class="text-uppercase fw-bold">Company name</h6>
-            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px" />
+            <h6 class="text-uppercase fw-bold">CARTMAX</h6>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: 00a5ba; height: 2px" />
             <p>
-              Here you can use rows and columns to organize your footer
-              content. Lorem ipsum dolor sit amet, consectetur adipisicing
-              elit.
+              The store which makes your cart max without makes your purse empty.
             </p>
           </div>
           <!-- Grid column -->
@@ -192,51 +191,35 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold">Products</h6>
-            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px" />
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: 00a5ba; height: 2px" />
             <p>
-              <a href="#!" class="text-white">MDBootstrap</a>
+              <a href="" class="text-white">Mobile Phones</a>
             </p>
             <p>
-              <a href="#!" class="text-white">MDWordPress</a>
+              <a href="#!" class="text-white">Home Appliances</a>
             </p>
             <p>
-              <a href="#!" class="text-white">BrandFlow</a>
+              <a href="#!" class="text-white">Fashion</a>
             </p>
             <p>
-              <a href="#!" class="text-white">Bootstrap Angular</a>
+              <a href="" class="text-white">Sports</a>
             </p>
           </div>
           <!-- Grid column -->
 
           <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold">Useful links</h6>
-            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px" />
-            <p>
-              <a href="#!" class="text-white">Your Account</a>
-            </p>
-            <p>
-              <a href="#!" class="text-white">Become an Affiliate</a>
-            </p>
-            <p>
-              <a href="#!" class="text-white">Shipping Rates</a>
-            </p>
-            <p>
-              <a href="#!" class="text-white">Help</a>
-            </p>
-          </div>
+   
           <!-- Grid column -->
 
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold">Contact</h6>
-            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px" />
-            <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-            <p><i class="fas fa-envelope mr-3"></i> info@example.com</p>
-            <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-            <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: 00a5ba; height: 2px" />
+            <p><i class="fas fa-home mr-3"></i>India,Kerela ,680734 </p>
+            <p><i class="fas fa-envelope mr-3"></i>richardshaju66@gmial.com</p>
+            <p><i class="fas fa-phone mr-3"></i>9495687674</p>
+            <p><i class="fas fa-print mr-3"></i>Whatsapp</p>
           </div>
           <!-- Grid column -->
         </div>
