Footers are added | Cart page conflict fixed |

--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -1,5 +1,5 @@
-<div class="ml-5 mr-5 pt-2">
-  <section  style="padding-top: 16rem;">
+<div class="ml-5 mr-5 ">
+  <section  style="padding-top: 7rem;">
      <div class="row pb-3">
       <a href="admin/add-product" class="btn btn-success ml-auto">Add Products</a>
     </div>
