--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -63,9 +63,9 @@
     </div>
   </div>
 </section>
-<section  id="about">
+<section id="about">
   <div class="">
-    <div class="row pl-4 pr-4"  style="background-color: #E5E4E2;">
+    <div class="row pl-4 pr-4" style="background-color: #E5E4E2;">
       <div class="  col-md-12 pt-2" style="color:#878787; font-family: Roboto,Arial,sans-serif;text-align: left;">
         <h5 style="" class="sub-head">What Can You Buy From CARTMAX?</h5>
         <h5 style="" class="sub-head">Mobile Phones</h5>
@@ -147,24 +147,24 @@
 
       <!-- Right -->
       <div>
-        <a href="" class="text-white me-4 mr-3 ">
-           <i class="fab fa-github"></i>
-          
+        <style>
+          .fab {
+
+            font-size: 20px;
+
+          }
+        </style>
+        <a href="https://github.com/richardshaju" class="text-white me-4 mr-4 ">
+          <i class="fab fa-github"></i>
         </a>
-        <a href="" class="text-white me-4  mr-3 ">
+        <a href="https://twitter.com/richard_shaju?t=MAsXlb2cJD80mLmmEyUzdw&s=09" class="text-white me-4  mr-4 ">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="" class="text-white me-4  mr-3 ">
-          <i class="fab fa-google"></i>
-        </a>
-        <a href="" class="text-white me-4  mr-3 ">
+        <a href="http://instagram.com/richard_kuttikkadan" class="text-white me-4  mr-4 ">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="" class="text-white me-4  mr-3 ">
+        <a href="https://www.linkedin.com/in/richard-shaju-a5902b244" class="text-white me-4  mr-4 ">
           <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="" class="text-white me-4  mr-3">
-         <i class="fab fa-facebook-f"></i>
         </a>
       </div>
       <!-- Right -->
@@ -193,22 +193,22 @@
             <h6 class="text-uppercase fw-bold">Products</h6>
             <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: 00a5ba; height: 2px" />
             <p>
-              <a href="" class="text-white">Mobile Phones</a>
+              <a href="/products/Mobiles" class="text-white">Mobile Phones</a>
             </p>
             <p>
-              <a href="#!" class="text-white">Home Appliances</a>
+              <a href="/products/Appliances" class="text-white">Home Appliances</a>
             </p>
             <p>
-              <a href="#!" class="text-white">Fashion</a>
+              <a href="/products/Fashion" class="text-white">Fashion</a>
             </p>
             <p>
-              <a href="" class="text-white">Sports</a>
+              <a href="/products/Sports" class="text-white">Sports</a>
             </p>
           </div>
           <!-- Grid column -->
 
           <!-- Grid column -->
-   
+
           <!-- Grid column -->
 
           <!-- Grid column -->
@@ -219,7 +219,8 @@
             <p><i class="fas fa-home mr-3"></i>India,Kerela ,680734 </p>
             <p><i class="fas fa-envelope mr-3"></i>richardshaju66@gmial.com</p>
             <p><i class="fas fa-phone mr-3"></i>9495687674</p>
-            <p><i class="fas fa-print mr-3"></i>Whatsapp</p>
+            <p><i class="fas fa-print mr-3"></i><a href="https://wa.me/qr/VEIUE4TN34DWH1"
+                style="color: #fff;"> Whatsapp </a></p>
           </div>
           <!-- Grid column -->
         </div>
@@ -230,8 +231,13 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2020 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      &copy;
+      <script type="text/javascript">
+        var today = new Date()
+        var year = today.getFullYear()
+        document.write(year)
+      </script>
+      <a class="text-white">CARTMAX</a>
     </div>
     <!-- Copyright -->
   </footer>
