--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -46,6 +46,18 @@
     <a type="submit" href="admin/login" target="_blank" class="ad btn btn-primary btn-block mb-4" style=" ">ADMIN MODE</a>
   </div>
 </section>
+<footer >
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    &copy;
+    <script type="text/javascript">
+      var today = new Date()
+      var year = today.getFullYear()
+      document.write(year)
+    </script>
+    <a class="text-black">CARTMAX</a>
+  </div>
+</footer>
 <style>
   .adrow {
     padding-left: 12rem;
