--- a/views/user/order-success.hbs
+++ b/views/user/order-success.hbs
@@ -1,7 +1,19 @@
-<div class="container  mt-5" style="padding-top: 15rem;">
+<div class="container  mt-5" style="padding-top: 15rem; padding-bottom: 16rem;" >
     <div class="col-md-12 text-center">
          <h2>Order Placed Successfully!</h2>
          <br>
          <a href="/orders" class="btn btn-success">View Orders</a>
     </div>
 </div> 
+<footer >
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    &copy;
+    <script type="text/javascript">
+      var today = new Date()
+      var year = today.getFullYear()
+      document.write(year)
+    </script>
+    <a class="text-black">CARTMAX</a>
+  </div>
+</footer>
