--- a/views/user/view-order-products.hbs
+++ b/views/user/view-order-products.hbs
@@ -19,3 +19,15 @@
     </div>
   </div>
 </section>
+<footer >
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    &copy;
+    <script type="text/javascript">
+      var today = new Date()
+      var year = today.getFullYear()
+      document.write(year)
+    </script>
+    <a class="text-black">CARTMAX</a>
+  </div>
+</footer>
