--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -103,3 +103,15 @@
     }
   </style>
 </section>
+<footer >
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    &copy;
+    <script type="text/javascript">
+      var today = new Date()
+      var year = today.getFullYear()
+      document.write(year)
+    </script>
+    <a class="text-black">CARTMAX</a>
+  </div>
+</footer>
